Section 3 - Creating a Basic Microservice - Class 2 - Creating a new project. Products Microservice.

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,9 @@
   <artifactId>eda-cqrs-axon</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <modules></modules>
+  <modules>
+    <module>product-service</module>
+  </modules>
 
 
   <properties>
@@ -38,7 +40,30 @@
   </dependencyManagement>
 
 
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+    </dependency>
+  </dependencies>
+
+
   <build>
+    <plugins>
+      <plugin>
+        <groupId>com.spotify.fmt</groupId>
+        <artifactId>fmt-maven-plugin</artifactId>
+        <version>${fmt-maven-plugin}</version>
+        <executions>
+          <execution>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
     <pluginManagement>
       <plugins>
         <plugin>
@@ -52,19 +77,6 @@
               </exclude>
             </excludes>
           </configuration>
-        </plugin>
-        <plugin>
-          <groupId>com.spotify.fmt</groupId>
-          <artifactId>fmt-maven-plugin</artifactId>
-          <version>${fmt-maven-plugin}</version>
-          <executions>
-            <execution>
-              <phase>validate</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
