--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.application.name=product-service
+eureka.instance.prefer-ip-address=true
+eureka.instance.instance-id: ${spring.application.name}:${random.value}
