--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
   <modules>
     <module>product-service</module>
     <module>discovery-server</module>
+    <module>gateway-server</module>
   </modules>
 
 
