--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.application.name=gateway-server
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id: ${spring.application.name}:${random.value}
+
+spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
