--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <spring-cloud.version>2021.0.2</spring-cloud.version>
     <fmt-maven-plugin>2.18</fmt-maven-plugin>
     <axonframework.version>4.5.9</axonframework.version>
+    <guava.version>31.1-jre</guava.version>
   </properties>
 
 
@@ -43,6 +44,11 @@
         <groupId>org.axonframework</groupId>
         <artifactId>axon-spring-boot-starter</artifactId>
         <version>${axonframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${guava.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
