--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -27,6 +27,10 @@
       <artifactId>axon-spring-boot-starter</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
