Section 8 - CQRS. Persisting Event in the Products database - Class 3 - Configure database access in the application.properties file

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.application.name=product-service
 eureka.instance.prefer-ip-address=true
 eureka.instance.instance-id: ${spring.application.name}:${random.value}
 server.port=0
+
+spring.datasource.url: jdbc:postgresql://localhost:5432/eda-cqrs-axon-products
+spring.datasource.username: postgres
+spring.datasource.password: password
+spring.jpa.open-in-view: true
+spring.jpa.hibernate.ddl-auto: update
