--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.username: postgres
 spring.datasource.password: password
 spring.jpa.open-in-view: true
 spring.jpa.hibernate.ddl-auto: update
+
+server.error.include-message=always
+server.error.include-binding-errors=always
