--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.ddl-auto: update
 
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+axon.eventhandling.processors.product-group.mode=subscribing
