--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>product-service</module>
     <module>discovery-server</module>
     <module>gateway-server</module>
+    <module>order-service</module>
   </modules>
 
 
