--- a/discovery-server/pom.xml
+++ b/discovery-server/pom.xml
@@ -10,17 +10,13 @@
   </parent>
 
 
-  <artifactId>products-service</artifactId>
+  <artifactId>discovery-server</artifactId>
 
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+      <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
